[project]
name = "qlora-implementation"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "torch (>=2.6.0,<3.0.0)",
  "transformers (>=4.48.3,<5.0.0)",
  "accelerate (>=1.3.0,<2.0.0)",
  "evaluate[evaluator] (>=0.4.3,<0.5.0)",
  "datasets (>=3.3.0,<4.0.0)",
  "pytest (>=8.3.4,<9.0.0)",
  "wandb (>=0.19.6,<0.20.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
